[package]
name = "sp-crypto-ec-utils-test-runtime"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"
description = "Integration tests for application-crypto"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../../../api" }
sp-core = { version = "21.0.0", default-features = false, features = ["serde"], path = "../../../../core" }
sp-crypto-ec-utils = { version = "0.4.0", default-features = false, path = "../../" }
sp-runtime = { version = "24.0.0", default-features = false, path = "../../../../runtime" }
sp-std = { version = "8.0.0", default-features = false, path = "../../../../std" }
sp-version = { version = "22.0.0", default-features = false, path = "../../../../version" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../../../../frame/system" }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../../../../frame/support" }
substrate-test-runtime = { version = "2.0.0", default-features = false, path = "../../../../../test-utils/runtime" }
codec = { version = "3.5.0", package = "parity-scale-codec", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.163", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
futures = "0.3.21"
sc-block-builder = { version = "0.10.0-dev", path = "../../../../../client/block-builder" }
sc-executor = { version = "0.10.0-dev", path = "../../../../../client/executor" }
sp-consensus = { version = "0.10.0-dev", path = "../../../../consensus/common" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../../../test-utils/runtime/client" }
sp-tracing = { version = "10.0.0", path = "../../../../tracing" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../../../../utils/wasm-builder", optional = true }

[features]
default = [ "std" ]
std = [
	"sp-api/std",
	"sp-core/std",
	"sp-crypto-ec-utils/std",
	"sp-runtime/std",
	"sp-std/std",
    "sp-version/std",
	"frame-system/std",
	"scale-info/std",
	"frame-support/std",
	"substrate-test-runtime/std",
	"codec/std",
    "serde",

	"substrate-wasm-builder",
]

disable-logging = [ "sp-api/disable-logging" ]